# earthworms-ssh

./: .gitignore  Cargo.toml  README.md  ssh_config.local
deploy/: worms-ssh.service
scripts/: build-release.sh  install-release.sh
src/: game.rs  lib.rs  main.rs  render.rs  ssh.rs  web.rs
static/: index.html
