[package]
name = "worms_ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive", "env"] }
rand = { version = "0.9.1", features = ["small_rng"] }
russh = { version = "0.60.2", default-features = false, features = ["flate2", "ring"] }
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
